--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
-.App {
-  text-align: center;
+.container {
+    height: 100%;
+    width: 1000px;
+    left: 50%;
+    top: 0;
+    position: absolute;
+    transform: translate(-50%, 0);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container>.header {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header>button {
+    margin-right: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header>.title {
+    font-size: 2em;
+    font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.header>.time {
+    margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container>.card-frame {
+    border: 3px solid gray;
+    border-radius: 5px;
+    height: 500px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.card-frame>.card {
+    margin: 10px;
+    height: 100px;
+    width: 480px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.card>.card-index {
+    width: 100px;
+    height: 100%;
+    border-radius: 5px 0 0 5px;
+    background-color: rgb(0, 116, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.index-word {
+    font-size: 2em;
+    color: white;
+    font-weight: bold;
+}
+
+.card>.card-info {
+    border: 2px solid rgb(150, 198, 150);
+    border-left: unset;
+    border-radius: 0 5px 5px 0;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.card-info>.flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.card-info>.prop {
+    width: 80px;
+    padding-left: 10px;
+}
+
+.card-info>.operation {
+    width: 80px;
+    padding: 10px 0;
+    align-items: center;
+}
+
+.card-info>.operation>button {
+    width: 70px;
+    height: 25px;
+}
+
+.search-matches {
+    color: rgb(213, 121, 120);
 }
